--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </h1>
   <p  class="des"><span id='number'>1</span><span id="des">% Royality Sharing!</span></p>
 
-  <p class="soon">
+  <p class="soon" id="coming">
 
-    Coming
+    Coming Shortly!
 
 
   </p>
